Fix: Overflow of MatrixDivier and it causing horizontal scrollbar to pop up

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -57,7 +57,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: url("/public/tv-static-2.gif");
+    background: url("/tv-static-2.gif");
     opacity: 0.1;
     mix-blend-mode: overlay;
   }
